# ada-keystore

./: .gitignore  .gitmodules  .spdxtool  .travis.yml  Makefile  Makefile.conf.in  Makefile.defaults  NEWS  NEWS.md  NOTICE.txt  README.md  alire-akt.toml  alire.toml  configure  configure.ac  coverage.sh  dynamo.xml  gakt.glade  gatk.glade  keystoreada.gpr  keystoreada.gpr.in  keystoreada_config.gpr  keystoreada_gtk.gpr.in  keystoreada_tests.gpr  keystoreada_tests.gpr.in  keystoreada_tools.gpr.in  mkdocs.yml  samples.gpr  tests.properties
.alire/: keystoreada.gpr  keystoreada_config.gpr  keystoreada_tools.gpr
.alire/akt/: alire.toml  keystoreada_tools.gpr
akt/: akt_fuse.gpr  akt_nofuse.gpr  alire.toml  keystoreada_tools.gpr
akt/po/: akt.pot  fr.po
akt/src/: akt-commands-config.adb  akt-commands-config.ads  akt-commands-create.adb  akt-commands-create.ads  akt-commands-drivers.adb  akt-commands-drivers.ads  akt-commands-edit.adb  akt-commands-edit.ads  akt-commands-extract.adb  akt-commands-extract.ads  akt-commands-genkey.adb  akt-commands-genkey.ads  akt-commands-get.adb  akt-commands-get.ads  akt-commands-info.adb  akt-commands-info.ads  akt-commands-list.adb  akt-commands-list.ads  akt-commands-otp.adb  akt-commands-otp.ads  akt-commands-password-add.adb  akt-commands-password-add.ads  akt-commands-password-remove.adb  akt-commands-password-remove.ads  akt-commands-password-set.adb  akt-commands-password-set.ads  akt-commands-password.adb  akt-commands-password.ads  akt-commands-remove.adb  akt-commands-remove.ads  akt-commands-set.adb  akt-commands-set.ads  akt-commands-store.adb  akt-commands-store.ads  akt-commands.adb  akt-commands.ads  akt-configs.adb  akt-configs.gpb  akt-main.adb  akt.adb  (+3 more)
debian/: ada_libraries  changelog  control  copyright  docs  examples.gpr  libkeystoreada-doc.doc-base.ada-keystore-guide  libkeystoreada-doc.docs  rules
docker/: Dockerfile
docs/: Design.md  Design_Implementation.md  Installation.md  Keystore.md  Keystore_Design.md  Keystore_IO_Headers.md  Keystore_Keys.md  Keystore_Passwords_GPG.md  Keystore_Programming.md  Keystore_Repository_Data.md  Keystore_Repository_Entries.md  Keystore_Tool.md  Programming.md  Tool.md  Using.md  akt.1  akt.md  index.md  keystoreada-book.html  links.txt  requirements.txt  title.md
gakt/: alire.toml  gakt_fuse.gpr  keystoreada_gtk.gpr
gakt/src/: akt-callbacks.adb  akt-callbacks.ads  akt-gtk.adb  akt-windows-load_ui_gtk3.adb  akt-windows.adb  akt-windows.ads
gtk/: akt-callbacks.adb  akt-callbacks.ads  akt-gtk.adb  akt-windows-load_ui_gtk3.adb  akt-windows.adb  akt-windows.ads
man/man1/: akt.1
po/: akt.pot  fr.mo  fr.po
regtests/: alire.toml  keystore-coverage.adb  keystore-coverage.ads  keystore-files-tests.adb  keystore-files-tests.ads  keystore-gpg_tests.adb  keystore-gpg_tests.ads  keystore-io-tests.adb  keystore-passwords-tests.adb  keystore-passwords-tests.ads  keystore-properties-tests.adb  keystore-properties-tests.ads  keystore-tests.adb  keystore-tests.ads  keystore-testsuite.adb  keystore-testsuite.ads  keystore-tools-tests.adb  keystore_harness.adb  keystoreada_tests.gpr
regtests/expect/: akt-help-config.txt  akt-help-create.txt  akt-help-edit.txt  akt-help-extract.txt  akt-help-password-add.txt  akt-help-set.txt  akt-help-store.txt  test-stream.txt
regtests/files/: build-test.sh  check-mount.sh  error-editor  error2-editor  fake-editor  file.key  gpg1-list.txt  gpg2-list.txt  setup-tests.sh  test-corrupted-1.akt  test-corrupted-2.akt  test-info.akt  test-keystore.akt  test-otp.akt  test-split.akt  test-wallet.akt  user1-key-script.gpg  user2-key-script.gpg  user3-key-script.gpg
regtests/fuse/: keystore-fuse_tests.adb  keystore-fuse_tests.ads
regtests/src/: keystore-coverage.adb  keystore-coverage.ads  keystore-files-tests.adb  keystore-files-tests.ads  keystore-gpg_tests.adb  keystore-gpg_tests.ads  keystore-io-tests.adb  keystore-io-tests.ads  keystore-passwords-tests.adb  keystore-passwords-tests.ads  keystore-properties-tests.adb  keystore-properties-tests.ads  (+7 more)
samples/: alire.toml  samples.gpr  wallet_gpg.adb  wallet_password.adb  wallet_ssh_askpass.adb
src/: keystore-buffers.adb  keystore-buffers.ads  keystore-containers.adb  keystore-containers.ads  keystore-files.adb  keystore-files.ads  keystore-gpg.adb  keystore-gpg.ads  keystore-io-files.adb  keystore-io-files.ads  keystore-io-headers.adb  keystore-io-headers.ads  keystore-io-refs.adb  keystore-io-refs.ads  keystore-io.adb  keystore-io.ads  keystore-keys.adb  keystore-keys.ads  keystore-logs.adb  keystore-logs.ads  keystore-marshallers.adb  keystore-marshallers.ads  keystore-metadata.adb  keystore-metadata.ads  keystore-passwords-cmds.adb  keystore-passwords-cmds.ads  keystore-passwords-files.adb  keystore-passwords-files.ads  keystore-passwords-gpg.adb  keystore-passwords-gpg.ads  keystore-passwords-input.adb  keystore-passwords-input.ads  keystore-passwords-keys.adb  keystore-passwords-keys.ads  keystore-passwords-unsafe.adb  keystore-passwords-unsafe.ads  keystore-passwords.adb  keystore-passwords.ads  keystore-properties.adb  keystore-properties.ads  (+16 more)
tools/: akt-commands-config.adb  akt-commands-config.ads  akt-commands-create.adb  akt-commands-create.ads  akt-commands-drivers.adb  akt-commands-drivers.ads  akt-commands-edit.adb  akt-commands-edit.ads  akt-commands-extract.adb  akt-commands-extract.ads  akt-commands-genkey.adb  akt-commands-get.adb  akt-commands-get.ads  akt-commands-info.adb  akt-commands-info.ads  akt-commands-list.adb  akt-commands-list.ads  akt-commands-otp.adb  akt-commands-otp.ads  akt-commands-password-add.adb  akt-commands-password-add.ads  akt-commands-password-remove.adb  akt-commands-password-remove.ads  akt-commands-password-set.adb  akt-commands-password-set.ads  akt-commands-password.adb  akt-commands-password.ads  akt-commands-remove.adb  akt-commands-remove.ads  akt-commands-set.adb  akt-commands-set.ads  akt-commands-store.adb  akt-commands-store.ads  akt-commands.adb  akt-commands.ads  akt-configs.adb  akt-configs.gpb  akt-gpg.adb  akt-gpg.ads  akt-main.adb  (+16 more)
(+32 files in other folders)
